# interpretation

./: .env.example  .gitattributes  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  gunicorn.conf.py  mypy.ini  pyproject.toml  readme.md
app/: main.py
app/api/: api_deps.py  main.py  metadata.py  routers.py
app/api/routers/: about.py  metadata.py
app/api/routers/v1/: predictions.py
app/api/v1/: about.py  interpretation.py  predictions.py  users.py
app/core/: config.py  context.py  lifespan.py  logger.py
app/core/middlewares/: create_context.py
app/core/utils/: filters.py  formatter.py
app/db/: cards.csv
app/depends/: db.py  llm_client.py
app/depends/adapters/: llm.py
app/migrations/: env.py
app/migrations/versions/: 202404300008-b274e709df40_init_db.py  202404301551-f682efb0569e_add_list_of_cards.py
app/models/: card.py  common.py  interpretation.py  prediction.py  response.py  user.py
app/services/: interpretation.py  prediction.py  user.py
app/services/predictions/: prompts.py
